test/error/03_missing_end.f
      PROGRAM ERREND
      INTEGER A
      A = 10
      PRINT *, A
